--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ docs/
 
 # Dotenv file
 .env
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
